Fixed a tiny layout bug in pdf rednering.

--- a/css/print.css
+++ b/css/print.css
@@ -1,5 +1,5 @@
 @page {
-  margin: 2rem 1rem; }
+  margin: 1rem; }
 html {
   font-size: 15px; }
 
